--- a/index.html
+++ b/index.html
@@ -2,46 +2,257 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#0b0b0f" />
   <title>낑갱 가계부</title>
-  <meta name="description" content="낑갱 가계부 - 간단 가계부 웹앱" />
   <style>
-    :root {
-      color-scheme: dark;
+    :root{
+      --bg:#0b0b0f;
+      --panel:#12121a;
+      --panel2:#161621;
+      --text:#f2f2f7;
+      --muted:#a7a7b6;
+      --line:#232334;
+      --accent:#4da3ff;
+      --danger:#ff5b5b;
+      --ok:#5bffb1;
+      --radius:16px;
     }
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", "Noto Sans KR", "Segoe UI", Roboto, Arial, sans-serif;
-      background: #0b0c10;
-      color: #eaeaea;
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background:var(--bg);
+      color:var(--text);
+      font-family:-apple-system,BlinkMacSystemFont,"Apple SD Gothic Neo","Noto Sans KR",Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      -webkit-font-smoothing:antialiased;
+      padding-bottom:78px; /* bottom tab 공간 */
     }
-    .wrap {
-      min-height: 100vh;
-      display: flex;
-      align-items: flex-start;
-      justify-content: flex-start;
-      padding: 48px 20px;
+
+    /* 상단 헤더 */
+    .header{
+      position:sticky; top:0;
+      background:linear-gradient(to bottom, rgba(11,11,15,.95), rgba(11,11,15,.72));
+      backdrop-filter: blur(10px);
+      border-bottom:1px solid var(--line);
+      padding:18px 16px 12px;
+      z-index:5;
     }
-    h1 {
-      margin: 0 0 10px 0;
-      font-size: 44px;
-      letter-spacing: -0.02em;
-      line-height: 1.05;
+    .title{
+      display:flex; align-items:center; justify-content:space-between;
+      gap:12px;
     }
-    p {
-      margin: 0;
-      font-size: 18px;
-      opacity: 0.9;
+    .title h1{
+      margin:0;
+      font-size:24px;
+      letter-spacing:-.3px;
+    }
+    .subtitle{
+      margin-top:6px;
+      color:var(--muted);
+      font-size:13px;
+    }
+
+    /* 메인 영역 */
+    .container{
+      padding:16px;
+      max-width:720px;
+      margin:0 auto;
+    }
+
+    /* 카드 */
+    .card{
+      background:var(--panel);
+      border:1px solid var(--line);
+      border-radius:var(--radius);
+      padding:14px;
+      margin-bottom:12px;
+    }
+    .card h2{
+      margin:0 0 10px 0;
+      font-size:16px;
+      letter-spacing:-.2px;
+    }
+    .hint{
+      color:var(--muted);
+      font-size:13px;
+      line-height:1.4;
+      margin:0;
+    }
+
+    /* 탭 페이지 */
+    .page{ display:none; }
+    .page.active{ display:block; }
+
+    /* 하단 탭바 */
+    .tabbar{
+      position:fixed; left:0; right:0; bottom:0;
+      height:66px;
+      background:rgba(18,18,26,.92);
+      backdrop-filter: blur(14px);
+      border-top:1px solid var(--line);
+      display:flex;
+      padding:8px 10px 10px;
+      z-index:10;
+    }
+    .tab{
+      flex:1;
+      border:none;
+      background:transparent;
+      color:var(--muted);
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      gap:4px;
+      border-radius:14px;
+      font-size:11px;
+      cursor:pointer;
+    }
+    .tab .icon{font-size:18px; line-height:1}
+    .tab.active{
+      color:var(--text);
+    }
+    .tab.active .icon{
+      filter: drop-shadow(0 0 10px rgba(77,163,255,.25));
+    }
+
+    /* 플로팅 + 버튼 (홈에서만 보이게 할거임) */
+    .fab{
+      position:fixed;
+      right:18px; bottom:86px;
+      width:54px; height:54px;
+      border-radius:18px;
+      border:1px solid rgba(255,255,255,.10);
+      background:linear-gradient(180deg, rgba(77,163,255,1), rgba(77,163,255,.82));
+      color:#06101f;
+      font-size:28px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      z-index:12;
+      box-shadow: 0 10px 22px rgba(0,0,0,.35);
+      cursor:pointer;
+    }
+    .fab.hidden{ display:none; }
+
+    /* 작은 배지 */
+    .pill{
+      display:inline-flex;
+      gap:6px;
+      align-items:center;
+      padding:6px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:var(--panel2);
+      color:var(--muted);
+      font-size:12px;
     }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
-    <div>
+  <header class="header">
+    <div class="title">
       <h1>낑갱 가계부</h1>
-      <p>정상적으로 열렸어요 🎉</p>
+      <span class="pill">로컬저장(내 폰에만)</span>
     </div>
-  </div>
+    <div class="subtitle">하단 탭으로 이동 · 홈에서 +로 입력(다음 단계에서 붙임)</div>
+  </header>
+
+  <main class="container">
+    <!-- HOME -->
+    <section class="page active" id="page-home">
+      <div class="card">
+        <h2>홈</h2>
+        <p class="hint">
+          여기엔 “지출/수입 추가” + “리스트”가 들어갈 자리야.<br/>
+          다음 단계에서 + 버튼 누르면 입력창 뜨게 만들 거임.
+        </p>
+      </div>
+
+      <div class="card">
+        <h2>최근 내역 (샘플)</h2>
+        <p class="hint">아직 데이터 연결 전이라 샘플만 보여줘.</p>
+      </div>
+    </section>
+
+    <!-- STATS -->
+    <section class="page" id="page-stats">
+      <div class="card">
+        <h2>통계</h2>
+        <p class="hint">
+          원형 그래프(카테고리 비율) + 전월 대비 막대그래프 자리.<br/>
+          (차트는 다음 단계에서 붙일게)
+        </p>
+      </div>
+    </section>
+
+    <!-- MONTHLY -->
+    <section class="page" id="page-monthly">
+      <div class="card">
+        <h2>월별</h2>
+        <p class="hint">
+          월 선택 → 해당 월 지출/수입 리스트 + 합계 자리.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <!-- Floating + button (Home only) -->
+  <button class="fab" id="fab" aria-label="추가">+</button>
+
+  <!-- Bottom tabs -->
+  <nav class="tabbar" role="tablist" aria-label="하단 탭">
+    <button class="tab active" data-target="home" role="tab" aria-selected="true">
+      <div class="icon">🏠</div>
+      <div>홈</div>
+    </button>
+    <button class="tab" data-target="stats" role="tab" aria-selected="false">
+      <div class="icon">📊</div>
+      <div>통계</div>
+    </button>
+    <button class="tab" data-target="monthly" role="tab" aria-selected="false">
+      <div class="icon">🗓️</div>
+      <div>월별</div>
+    </button>
+  </nav>
+
+  <script>
+    // 탭 전환
+    const tabs = document.querySelectorAll('.tab');
+    const pages = {
+      home: document.getElementById('page-home'),
+      stats: document.getElementById('page-stats'),
+      monthly: document.getElementById('page-monthly'),
+    };
+    const fab = document.getElementById('fab');
+
+    function setActiveTab(target){
+      // pages
+      Object.entries(pages).forEach(([key, el])=>{
+        el.classList.toggle('active', key === target);
+      });
+
+      // tabs
+      tabs.forEach(t=>{
+        const isActive = t.dataset.target === target;
+        t.classList.toggle('active', isActive);
+        t.setAttribute('aria-selected', isActive ? 'true' : 'false');
+      });
+
+      // + 버튼은 홈에서만 보이기
+      fab.classList.toggle('hidden', target !== 'home');
+    }
+
+    tabs.forEach(t=>{
+      t.addEventListener('click', ()=> setActiveTab(t.dataset.target));
+    });
+
+    // + 버튼은 다음 단계에서 “입력 모달”로 연결할 거라 지금은 안내만
+    fab.addEventListener('click', ()=>{
+      alert('다음 단계: 지출/수입 입력창을 붙일 거야 🙂');
+    });
+  </script>
 </body>
 </html>
