--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
       z-index:12;
       box-shadow: 0 10px 22px rgba(0,0,0,.35);
       cursor:pointer;
-      transform: translateY(-5px);
     }
     .fab.hidden{ display:none; }
 
@@ -201,7 +200,7 @@
   </main>
 
   <!-- Floating + button (Home only) -->
-  <button class="fab" id="fab" aria-label="추가">+</button>
+  <button class="fab"><span class="plus">+</span></button>
 
   <!-- Bottom tabs -->
   <nav class="tabbar" role="tablist" aria-label="하단 탭">
