--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
       z-index:12;
       box-shadow: 0 10px 22px rgba(0,0,0,.35);
       cursor:pointer;
+      line-height: 0;
+      padding-bottom: 2px;
     }
     .fab.hidden{ display:none; }
 
