--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
 
     .seg-btn{
       flex:1;
-      height:44px;
+      height:40px;
       border-radius:14px;
       border:1px solid rgba(255,255,255,.14);
       background: rgba(255,255,255,.06);
       color: rgba(255,255,255,.85);
-      font-size:16px;
+      font-size:13px;
       font-weight:700;
       letter-spacing:-0.2px;
       cursor:pointer;
@@ -283,7 +283,7 @@
 
     <div class="row">
       <label>금액</label>
-      <input type="number" id="amount" placeholder="금액 입력" inputmode="numeric" />
+      <input type="text" id="amount" placeholder="금액 입력" inputmode="numeric" autocomplete="off" />
     </div>
 
     <div class="row">
