--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
     <div class="row">
       <label>금액</label>
-      <input type="text" id="amount" placeholder="금액 입력" inputmode="numeric" autocomplete="off" />
+      <input type="number" id="amount" placeholder="금액 입력" inputmode="numeric" autocomplete="off" />
     </div>
 
     <div class="row">
