--- a/index.html
+++ b/index.html
@@ -489,6 +489,8 @@ saveBtn.addEventListener('click', ()=>{
   amountEl.value = digits.replace(/\B(?=(\d{3})+(?!\d))/g, ',');
   });
 })();
+
+  const closeBtn = document.getElementById("close");
     
   </script>
 </body>
