--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       border:1px solid rgba(255,255,255,.10);
       background:linear-gradient(180deg, rgba(77,163,255,1), rgba(77,163,255,.82));
       color:#06101f;
-      font-size:32px;
+      font-size:34px;
       display:flex;
       align-items:center;
       justify-content:center;
@@ -213,7 +213,7 @@
     }
     
     /* iOS에서 input 클릭 시 자동 확대(zoom) 방지 핵심 */
-    input, select, textarea, button {
+    input, select, textarea {
       font-size: 16px !important;
     }
 
