--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
       border:1px solid rgba(255,255,255,.10);
       background:linear-gradient(180deg, rgba(77,163,255,1), rgba(77,163,255,.82));
       color:#06101f;
-      font-size:34px;
+      font-size:34px !important;
       display:flex;
       align-items:center;
       justify-content:center;
       z-index:12;
       box-shadow: 0 10px 22px rgba(0,0,0,.35);
       cursor:pointer;
-      line-height: 1;
-      padding-bottom: 0;
+      line-height: 1 !important;
+      padding-bottom: 0 !important;
     }
     .fab.hidden{ display:none; }
 
