--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
     </div>
 
     <div class="actions">
-      <button id="save">저장</button>
-      <button class="ghost" id="close">닫기</button>
+      <button id="save" type="button">저장</button>
+      <button id="close" type="button">닫기</button>
     </div>
   </div>
 </div>
