--- a/index.html
+++ b/index.html
@@ -296,12 +296,7 @@
 
 <div class="row">
   <label>금액</label>
-  <input
-    type="number"
-    id="amount"
-    placeholder="금액 입력"
-    inputmode="numeric"
-  />
+  <input type="text" id="amount" placeholder="금액 입력" inputmode="numeric" autocomplete="off" />
 </div>
 
     <div class="row">
