--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
       box-shadow: 0 10px 22px rgba(0,0,0,.35);
       cursor:pointer;
       line-height: 1 !important;
-      padding-top: 4px !important;
-      padding-bottom: 0 !important;
+      padding-top: 0 !important;
+      padding-bottom: 2px !important;
     }
     .fab.hidden{ display:none; }
 
