--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
       z-index:12;
       box-shadow: 0 10px 22px rgba(0,0,0,.35);
       cursor:pointer;
-      line-height: 1 !important;
-      padding-top: 0 !important;
-      padding-bottom: 2px !important;
+      line-height: 1;
+      padding-top: 2px;
     }
     .fab.hidden{ display:none; }
 
