--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>낑갱 가계부</title>
   <style>
     :root{
-      --bg:#0b0b0f;
-      --panel:#12121a;
-      --panel2:#161621;
-      --text:#f2f2f7;
-      --muted:#a7a7b6;
-      --line:#232334;
+      --bg: #f7f7f8;
+      --panel: #ffffff;
+      --panel2: #f1f1f4;
+      --text: #111111;
+      --muted: #666666;
+      --line: rgba(0,0,0,.08);
       --accent:#4da3ff;
       --danger:#ff5b5b;
       --ok:#5bffb1;
