--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       width:54px; height:54px;
       border-radius:18px;
       border:1px solid rgba(255,255,255,.10);
-      background:linear-gradient(180deg, rgba(77,163,255,1), rgba(77,163,255,.82));
+      background: linear-gradient(180deg, #67b4ff, #3a95ff);
       color:#06101f;
       font-size:32px !important;
       display:flex;
