--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
     .card{
       background:var(--panel);
       border:1px solid var(--line);
-      border-radius:var(--radius);
-      padding:14px;
-      margin-bottom:12px;
+      box-shadow: 0 10px 26px var(--shadow);
     }
     .card h2{
       margin:0 0 10px 0;
@@ -137,9 +135,10 @@
       right:18px; bottom:86px;
       width:54px; height:54px;
       border-radius:18px;
-      border:1px solid rgba(255,255,255,.10);
-      background: linear-gradient(180deg, #67b4ff, #3a95ff);
-      color:#06101f;
+      background: linear-gradient(180deg, #7cc0ff, #4da3ff);
+      border: 1px solid rgba(0,0,0,.06);
+      box-shadow: 0 12px 26px rgba(0,0,0,.12);
+      color: #06101f;
       font-size:32px !important;
       display:flex;
       align-items:center;
@@ -149,6 +148,10 @@
       cursor:pointer;
       line-height: 1;
       padding-top: 2px;
+    }
+    .fab span{
+      display:inline-block;
+      transform: translateY(-2px);
     }
     .fab.hidden{ display:none; }
 
@@ -167,7 +170,7 @@
 
     .modal{
       position:fixed; inset:0;
-      background:rgba(0,0,0,.5);
+      background: var(--overlay);
       display:flex; align-items:flex-end;
       z-index:20;
     }
@@ -238,6 +241,16 @@
     
 
     .hidden { display: none !important; }
+
+@supports (background: color-mix(in srgb, white, black)) {
+  .fab{
+    background: linear-gradient(
+      180deg,
+      color-mix(in srgb, var(--accent) 78%, white),
+      var(--accent)
+    );
+  }
+}
     
   </style>
 </head>
@@ -291,7 +304,7 @@
   </main>
 
   <!-- Floating + button (Home only) -->
-  <button class="fab" id="fab" aria-label="추가">+</button>
+  <button class="fab" id="fab" type="button"><span>+</span></button>
   <div class="modal hidden" id="modal">
   <div class="sheet">
     <h3>지출 / 수입 추가</h3>
