--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     --bg: #f7f7f8;
     --panel: #ffffff;
     --panel2: #f1f1f4;
-
+    --shadow: rgba(0,0,0,.10);
     --text: #111111;
     --muted: #666666;
     --line: rgba(0,0,0,.08);
@@ -75,8 +75,11 @@
 
     /* 카드 */
     .card{
-      background:var(--panel);
-      border:1px solid var(--line);
+      background: var(--panel); 
+      border: 1px solid var(--line);
+      border-radius: var(--radius);
+      padding: 14px;
+      margin-bottom: 12px;
       box-shadow: 0 10px 26px var(--shadow);
     }
     .card h2{
