--- a/index.html
+++ b/index.html
@@ -202,30 +202,24 @@
     .actions .ghost{background:transparent; color:var(--muted)} 
 
     /* 지출/수입 토글 버튼 */
-    .segmented{
-      display:flex;
-      gap:10px;
-      margin: 6px 0 14px;
-    }
+    
+    /* 라이트 테마에서 지출/수입 토글이 안 보일 때 대비 올리기 */
+.segmented{
+  background: transparent;
+}
 
-    .seg-btn{
-      flex:1;
-      height:40px;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.14);
-      background: rgba(255,255,255,.06);
-      color: rgba(255,255,255,.85);
-      font-size:13px;
-      font-weight:700;
-      letter-spacing:-0.2px;
-      cursor:pointer;
-    }
+.seg-btn{
+  border: 1px solid rgba(0,0,0,.12);
+  background: rgba(0,0,0,.03);
+  color: rgba(0,0,0,.75);
+}
 
-    .seg-btn.active{
-      background: rgba(255,255,255,.92);
-      color: #111;
-      border-color: rgba(255,255,255,.92);
-    }
+.seg-btn.active{
+  background: #ffffff;
+  border-color: rgba(77,163,255,.35); /* accent */
+  color: #111;
+  box-shadow: 0 8px 18px rgba(0,0,0,.08);
+}
 
     .type-btn {
       font-size: 13px;   /* ← 여기서 조절 (13~15 추천) */
