--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     /* 상단 헤더 */
   .header{
     position:sticky; top:0;
-    background: linear-gradient(to bottom, var(--surface-strong), var(--surface));
+    background: linear-gradient(to bottom, rgba(255,255,255,.92), rgba(255,255,255,.72));
     backdrop-filter: blur(10px);
     border-bottom:1px solid var(--line);
     padding:18px 16px 12px;
@@ -102,7 +102,7 @@
     .tabbar{
      position:fixed; left:0; right:0; bottom:0;
      height:66px;
-     background: var(--surface);
+     background: rgba(255,255,255,.82);
      backdrop-filter: blur(14px);
      border-top:1px solid var(--line);
      display:flex;
@@ -209,16 +209,14 @@
 }
 
 .seg-btn{
-  border: 1px solid rgba(0,0,0,.12);
+  border:1px solid rgba(0,0,0,.12);
   background: rgba(0,0,0,.03);
   color: rgba(0,0,0,.75);
 }
-
 .seg-btn.active{
-  background: #ffffff;
-  border-color: rgba(77,163,255,.35); /* accent */
-  color: #111;
-  box-shadow: 0 8px 18px rgba(0,0,0,.08);
+  background:#111;
+  color:#fff;
+  border-color:#111;
 }
 
     .type-btn {
