--- a/index.html
+++ b/index.html
@@ -201,24 +201,34 @@
     }
     .actions .ghost{background:transparent; color:var(--muted)} 
 
-    /* 지출/수입 토글 버튼 */
-    
-    /* 라이트 테마에서 지출/수입 토글이 안 보일 때 대비 올리기 */
+/* ===== 지출/수입 토글 ===== */
 .segmented{
-  background: transparent;
+  display:flex;
+  gap:12px;
+  margin: 8px 0 14px;
 }
 
 .seg-btn{
-  border:1px solid rgba(0,0,0,.12);
-  background: rgba(0,0,0,.03);
-  color: rgba(0,0,0,.75);
+  flex:1;
+  height:44px;
+  border-radius:14px;
+  border:1px solid rgba(0,0,0,.10);
+  background: rgba(0,0,0,.04);
+  color:#111;
+  font-size:14px;
+  font-weight:700;
+  letter-spacing:-0.2px;
+  cursor:pointer;
+  -webkit-appearance:none;
+  appearance:none;
 }
+
 .seg-btn.active{
   background:#111;
   color:#fff;
   border-color:#111;
+  box-shadow:0 8px 18px rgba(0,0,0,.10);
 }
-
     .type-btn {
       font-size: 13px;   /* ← 여기서 조절 (13~15 추천) */
       padding: 8px 14px;
