--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     }
     .actions .ghost{background:transparent; color:var(--muted)} 
 
-/* Cloud Dancer – 지출/수입 토글 */
+/* Cloud Dancer – Sage 지출/수입 토글 */
 .segmented{
   display:flex;
   gap:12px;
@@ -212,9 +212,9 @@
   flex:1;
   height:44px;
   border-radius:14px;
-  border:1px solid #D9DDE5;          /* Mist Line Gray */
-  background:#EFF1F5;                /* Soft Fog Gray */
-  color:#2E323A;                     /* Cloud Ink */
+  border:1px solid #D9DDE5;      /* Mist Line Gray */
+  background:#EFF1F5;            /* Soft Fog Gray */
+  color:#2E323A;                 /* Cloud Ink */
   font-size:14px;
   font-weight:700;
   letter-spacing:-0.2px;
@@ -229,11 +229,11 @@
       180deg,
       #F7F8FA,
       #EFF1F5
-    );                                /* Cloud Dancer White → Soft Fog */
-  color:#2E323A;                     /* Cloud Ink */
-  border-color:#6B8DFF;              /* Sky Accent Blue */
+    );                            /* Cloud Dancer White → Soft Fog */
+  color:#2E323A;                 /* Cloud Ink */
+  border-color:#7FAE9E;          /* 🌿 Cloud Sage */
   box-shadow:
-    0 6px 14px rgba(107,141,255,.25),
+    0 6px 14px rgba(127,174,158,.28),
     inset 0 1px 0 rgba(255,255,255,.9);
 }
 
