--- a/index.html
+++ b/index.html
@@ -138,16 +138,18 @@
       right:18px; bottom:86px;
       width:54px; height:54px;
       border-radius:18px;
-      background: linear-gradient(180deg, #7cc0ff, #4da3ff);
-      border: 1px solid rgba(0,0,0,.06);
+      background: linear-gradient(180deg, #8FBFB0, #7FAE9E);  /* Cloud Sage */
+      border:1px solid rgba(127,174,158,.55);
       box-shadow: 0 12px 26px rgba(0,0,0,.12);
-      color: #06101f;
+      color:#2E323A;                                          /* Cloud Ink */
       font-size:32px !important;
       display:flex;
       align-items:center;
       justify-content:center;
       z-index:12;
-      box-shadow: 0 10px 22px rgba(0,0,0,.35);
+      box-shadow:
+        0 12px 26px rgba(127,174,158,.45),
+        inset 0 1px 0 rgba(255,255,255,.75);
       cursor:pointer;
       line-height: 1;
       padding-top: 2px;
