--- a/index.html
+++ b/index.html
@@ -161,6 +161,42 @@
 .fab{ padding-bottom:2px; }
 
 
+
+/* ===== FAB 최종 강제(파랑/유격/작은 + 전부 해결) ===== */
+.fab{
+  /* 모양/위치 고정 */
+  position:fixed !important;
+  right:18px !important;
+  bottom:86px !important;
+  width:54px !important;
+  height:54px !important;
+  border-radius:18px !important;
+
+  /* 정렬 */
+  display:flex !important;
+  align-items:center !important;
+  justify-content:center !important;
+
+  /* + 크기/위치 */
+  font-size:30px !important;
+  line-height:1 !important;
+  padding-bottom:2px !important;
+
+  /* ✅ Sage 배경 강제 */
+  background: linear-gradient(180deg, #8FBFB0, #7FAE9E) !important;
+  color:#2E323A !important;
+
+  /* ✅ 유격(테두리) 제거 */
+  border:none !important;
+
+  /* 그림자 */
+  box-shadow:
+    0 12px 26px rgba(127,174,158,.35),
+    inset 0 1px 0 rgba(255,255,255,.75) !important;
+
+  z-index:12 !important;
+}
+    
     
     /* 작은 배지 */
     .pill{
