--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 
       /* ✅ 여기부터 Sage 톤 */
       background: linear-gradient(180deg, #8FBFB0, #7FAE9E);
-      color:#2E323A; /* Cloud Ink */
+      color: #F7F8FA; /* Cloud Dancer White */
+      text-shadow: 0 1px 0 rgba(46,50,58,.12);
       border: 1px solid rgba(127,174,158,.28); /* 아주 얇게만 */
       box-shadow:
         0 12px 26px rgba(127,174,158,.35),
