--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
 
   /* ✅ Sage 배경 강제 */
   background: linear-gradient(180deg, #8FBFB0, #7FAE9E) !important;
-  color:#2E323A !important;
-
+  color: #F7F8FA !important;         /* Cloud Dancer White */
+  text-shadow: 0 1px 0 rgba(46,50,58,.12) !important;
+  
   /* ✅ 유격(테두리) 제거 */
   border:none !important;
 
