--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
       letter-spacing: -0.2px;
       cursor: pointer;
       padding: 12px;
+      margin-top: 32px;
     }
 
     /* 역할별 차이만 */
