--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
     const pages = {
       home: document.getElementById('page-home'),
       stats: document.getElementById('page-stats'),
+      budget: document.getElementById('page-budget'), // ✅ 추가
       monthly: document.getElementById('page-monthly'),
     };
     const fab = document.getElementById('fab');
