--- a/index.html
+++ b/index.html
@@ -385,6 +385,28 @@
           목표 대비 사용 현황을 확인할 수 있어요.
         </p>
       </div>
+      
+      <div class="card">
+        <h2>이번 달 예산</h2>
+        <div class="row">
+          <label>식비</label>
+          <input type="text" placeholder="예: 600,000원" disabled />
+        </div>
+
+        <div class="row">
+          <label>생활비</label>
+          <input type="text" placeholder="예: 400,000원" disabled />
+        </div>
+
+        <div class="row">
+          <label>취미 / 여가</label>
+          <input type="text" placeholder="예: 200,000원" disabled />
+        </div>
+
+        <p class="hint">
+        ※ 오늘은 UI만. 입력/계산은 다음 단계에서 연결할게요.
+        </p>
+      </div>
     </section>
 
     <!-- MONTHLY -->
