--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
       </div>
 
       <div class="card">
-        <h2>최근 내역 (샘플)</h2>
-        <p class="hint">아직 데이터 연결 전이라 샘플만 보여줘.</p>
+        <h2>최근 내역</h2>
+        <div id="recentList"></div>
       </div>
     </section>
 
