--- a/index.html
+++ b/index.html
@@ -483,7 +483,12 @@
       <input type="hidden" id="type" value="expense" />
     </div>
 
-<div class="row">
+    <div class="row">
+      <label>날짜</label>
+      <input type="date" id="spentDate" />
+    </div>
+
+    <div class="row">
   <label>금액</label>
   <input type="text" id="amount" placeholder="금액 입력" inputmode="numeric" autocomplete="off" />
 </div>
