--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
 
     input[type="date"]{
      text-align: left;
+     padding-left: 10px;
     }
     input[type="date"]::-webkit-datetime-edit {
      text-align: left;
