--- a/index.html
+++ b/index.html
@@ -374,11 +374,14 @@ input[type="date"]::-webkit-date-and-time-value{
       gap:4px;
     }
     .recent-meta{
-      font-size:12px;
+      font-size: 12px;        /* 그대로 */
+      font-weight: 400;       /* 🔥 이게 핵심 */
+      line-height: 1.3;       /* 🔥 줄간격 줄이기 */
+      letter-spacing: 0;      /* 🔥 자간 리셋 */
       color:var(--muted);
     }
     .recent-amt{
-      font-weight:800;
+      font-weight: 600;
     }
 
     /* 지출 */
