--- a/index.html
+++ b/index.html
@@ -342,14 +342,14 @@
 
 
     /* iOS Safari date input text-align fix */
-input[type="date"]{
-  text-align: left;
-  padding-left: 10px; /* 왼쪽으로 ‘붙어 보이게’ */
-}
+    input[type="date"]{
+      text-align: left;
+      padding-left: 10px; /* 왼쪽으로 ‘붙어 보이게’ */
+    }
 
-input[type="date"]::-webkit-date-and-time-value{
-  text-align: left;
-}
+    input[type="date"]::-webkit-date-and-time-value{
+      text-align: left;
+    }
     .hidden { display: none !important; }
 
 
@@ -392,6 +392,16 @@ input[type="date"]::-webkit-date-and-time-value{
     /* 수입 */
     .recent-amt.income{
       color: var(--income-green);
+    }
+
+    /* 지출: 세이지와 어울리는 muted red */
+    .amt-expense{
+      color: #C94A4A;   /* 너무 쨍하지 않은, 회기 도는 레드 */
+    }
+
+    /* 수입: 세이지 계열 그린 */
+    .amt-income{
+      color: #3E8E7E;   /* 세이지와 같은 계열 */
     }
 
     
